tests/negative/typecheck/int_oob.orng
// int_oob.orng:5:24: error: error: integer is out of bounds for type `Int8`; value=200
// fn main() -> Int8 { 200 }
//                       ^
// 
fn main() -> Int8 { 200 }